@@ -33,18 +33,23 @@ public class CommunityServiceImpl implements CommunityService {
 	@Override
 	public Map<String, Object> getReplyList(Search search, int recordNo) throws Exception {
 		List<Object> list = communityDao.getReplyList(search, recordNo);
-		int totalCount = communityDao.getReplyTotalCount(search);
+		int totalCount = communityDao.getReplyTotalCount(search, recordNo);
 		
-		Map<String, Object> map = new HashMap<String, Object>();
+		Map<String, Object> map = new HashMap<>();
 		map.put("list", list);
-		map.put("totalCount", new Integer(totalCount));
+		map.put("totalCount", Integer.valueOf(totalCount));
 		return map;
 	}
 
 	@Override
-	public List<Object> getUserReplyList(Search search, String userId) throws Exception {
-		// TODO Auto-generated method stub
-		return null;
+	public Map<String, Object> getUserReplyList(Search search, String userId) throws Exception {
+		List<Object> list = communityDao.getUserReplyList(search, userId);
+		int totalCount = communityDao.getReplyUserTotalCount(search, userId);
+		
+		Map<String, Object> map = new HashMap<>();
+		map.put("list", list);
+		map.put("totalCount", Integer.valueOf(totalCount));
+		return map;
 	}
 	
 	@Override
@@ -63,31 +68,56 @@ public class CommunityServiceImpl implements CommunityService {
 	}
 
 	@Override
-	public void deleteReply(Reply reply) throws Exception {
-		communityDao.deleteReply(reply);
-		
+	public void deleteReply(String userId, int replyNo) throws Exception {
+		communityDao.deleteReply(userId, replyNo);
 	}
 
 	@Override
-	public void updateBookmarkSharedRecord(CommunityLogs communityLogs, String userId) throws Exception {
-
-	}
-
-	@Override
-	public void updateReactionSharedRecord(CommunityLogs communityLogs, String userId) throws Exception {
-		
-	}
+	public void addBookmarkSharedRecord(CommunityLogs communityLogs) throws Exception {
+		communityDao.addBookmarkSharedRecord(communityLogs);
+	}	
 
 	@Override
-	public void updateReactionReply(CommunityLogs communityLogs, String userId) throws Exception {
-
+	public void deleteBookmarkSharedRecord(String userId, int recordNo) throws Exception {
+		communityDao.deleteBookmarkSharedRecord(userId, recordNo);
 	}
 
 	@Override
 	public Map<String, Object> getBookMarkSharedRecordList(Search search, String userId) throws Exception {
-		// TODO Auto-generated method stub
 		return null;
+	}	
+	
+	@Override
+	public void addReaction(CommunityLogs communityLogs) throws Exception {
+		communityDao.addReaction(communityLogs);
 	}
+
+	@Override
+	public void updateReaction(CommunityLogs communityLogs) throws Exception {
+		communityDao.updateReaction(communityLogs);
+	}
+
+	@Override
+	public void deleteReaction(CommunityLogs communityLogs) throws Exception {
+		communityDao.deleteReaction(communityLogs);
+	}
+
+//	@Override
+//	public void addReactionReply(CommunityLogs communityLogs, String userId, int recordNo, int replyNo, int logsType) throws Exception {
+//		communityDao.addReactionReply(communityLogs, userId, recordNo, replyNo, logsType);
+//	}
+//
+//	@Override
+//	public void updateReactionReply(CommunityLogs communityLogs, String userId, int recordNo, int replyNo, int logsType) throws Exception {
+//		communityDao.updateReactionReply(communityLogs, userId, recordNo, replyNo, logsType);
+//		
+//	}
+//
+//	@Override
+//	public void deleteReactionReply(CommunityLogs communityLogs, String userId, int recordNo, int replyNo, int logsType) throws Exception {
+//		communityDao.deleteReactionSharedRecord(communityLogs, userId, recordNo, logsType);
+//		
+//	}	
 
 	@Override
 	public Map<String, Object> getReactionList(Search search, String userId) throws Exception {
